--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.4",
     "@nuxtjs/strapi": "^1.11.0",
+    "@stefanobartoletti/nuxt-social-share": "^1.0.0",
     "axios": "^1.6.7",
     "nuxt": "^3.10.2",
     "vue": "^3.4.33",
+    "vue-awesome-paginate": "^1.2.0",
     "vue-axios": "^3.5.2",
+    "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.2.5",
     "vue-strapi-blocks-renderer": "^0.2.2",
     "vue3-carousel-nuxt": "^1.1.0"
