--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "node.output/server/index.mjs"
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
@@ -28,5 +29,10 @@
     "@types/vue": "^2.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.16.4"
-  }
+  },
+  "engines": {
+    "node": "20.x"
+  },
+
+  
 }
